@startuml CSDL_Nhom4
title Sơ đồ CSDL - Nhóm 4: Quản lý Xe

skinparam linetype ortho
hide circle
skinparam classFontSize 12

entity "xe" as xe {
  *id : bigint <<PK>>
  --
  bien_so : varchar(20) <<unique>>
  hang_xe : varchar(50)
  dong_xe : varchar(50)
  nam_san_xuat : year
  loai_xe : enum(so_san, so_tu_dong)
  hang_bang : enum(A1,A,B1,B2,C1,C,D,E,CE)
  mau_xe : varchar(30)
  so_km_hien_tai : int
  ngay_dang_kiem : date
  ngay_dang_kiem_tiep_theo : date
  ngay_bao_hiem : date
  trang_thai : enum(san_sang, dang_su_dung,\n  bao_tri, hong, nghi_huu)
  ghi_chu : text
  created_at : timestamp
  updated_at : timestamp
}

entity "lich_hoc" as lich_hoc {
  *id : bigint <<PK>>
  --
  *lop_hoc_id : bigint <<FK - lop_hoc>>
  xe_id : bigint <<FK - xe>>
  ngay_hoc : date
  gio_bat_dau : time
  gio_ket_thuc : time
  loai_buoi : enum(ly_thuyet, thuc_hanh)
  dia_diem : varchar(255)
  noi_dung : text
  ghi_chu : text
  created_at : timestamp
  updated_at : timestamp
}

entity "bao_loi_xe" as bao_loi {
  *id : bigint <<PK>>
  --
  *xe_id : bigint <<FK - xe>>
  *giang_vien_id : bigint <<FK - giang_vien>>
  lich_hoc_id : bigint <<FK - lich_hoc>>
  tieu_de : varchar(200)
  mo_ta : text
  muc_do : enum(nhe, trung_binh, nghiem_trong)
  trang_thai : enum(cho_xu_ly, dang_xu_ly, da_xu_ly)
  ghi_chu_xu_ly : text
  ngay_xu_ly : timestamp
  created_at : timestamp
  updated_at : timestamp
}

entity "giang_vien" as giang_vien {
  *id : bigint <<PK>>
  --
  *user_id : bigint <<FK - users>>
  chuyen_mon : enum(ly_thuyet, thuc_hanh, ca_hai)
  bang_cap : varchar(255)
  nam_kinh_nghiem : int
}

xe ||--o{ lich_hoc : "1 xe → nhiều buổi học"
xe ||--o{ bao_loi : "1 xe → nhiều báo lỗi"
giang_vien ||--o{ bao_loi : "giảng viên báo lỗi"
lich_hoc |o--o{ bao_loi : "liên quan buổi học"

@enduml
